--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ footer {
 }
 
 footer a {
-    color: blue; /* White text for links */
+    color: green; /* White text for links */
     text-decoration: none; /* Remove underline from links */
 }
 
